tests/baselines/reference/instantiateTypeParameter.errors.txt
instantiateTypeParameter.ts(2,5): error TS1131: Property or signature expected.
instantiateTypeParameter.ts(2,12): error TS2304: Cannot find name 'T'.
instantiateTypeParameter.ts(3,1): error TS1128: Declaration or statement expected.


==== instantiateTypeParameter.ts (3 errors) ====
    interface Foo<T> {
        var x: T<>;
        ~~~
!!! error TS1131: Property or signature expected.
               ~
!!! error TS2304: Cannot find name 'T'.
    }
    ~
!!! error TS1128: Declaration or statement expected.